--- a/projects/demos/espanor/index.html
+++ b/projects/demos/espanor/index.html
@@ -245,36 +245,51 @@
         </div>
         <div class="d-flex justify-content-center container"><iframe width="100%" height="600px" src="https://www.youtube-nocookie.com/embed/16ZHWo-VMUU?si=ftzUXrkSHVfw985t" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></div>
     </div>
-    <div class="container-fluid bg-light service py-5">
+    <div class="container-fluid donation py-5">
         <div class="container py-5">
             <div class="text-center mx-auto pb-5" style="max-width:800px;">
                 <h5 class="text-uppercase text-primary">Servicos</h5>
-                <h1 class="mb-0">O que fazemos para a comunidade</h1>
+                <h1 class="mb-0 small">...</h1>
             </div>
             <div class="row g-4">
-                <div class="col-md-6 col-lg-6 col-xl-3">
-                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
-                        <div class="service-link"><a href="#" class="h4 mb-0">Educacao da Infancia</a></div>
+                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Educacao de Infancia</h5>
+                            <p class="text-white mb-4">Ensinar tocando coracoes</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
                     </div>
-                    <p class="my-4">Ensinar tocando coracoes </p>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
-                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
-                        <div class="service-link"><a href="#" class="h4 mb-0">SOPHIA</a></div>
+                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">SOPHIA</h5>
+                            <p class="text-white mb-4">Dispomos de cursos técnicos para capacitar jovens e adultos, preparando-os para o mercado de trabalho.</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
                     </div>
-                    <p class="my-4">Dispomos de cursos técnicos para capacitar jovens e adultos, preparando-os para o mercado de trabalho.</p>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
-                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
-                        <div class="service-link"><a href="#" class="h4 mb-0">Desenvolvimento Comunitario</a></div>
+                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Desenvolvimento Comunitario</h5>
+                            <p class="text-white mb-4">Contribuímos para o desenvolvimento sustentável das comunidades atendidas.</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
                     </div>
-                    <p class="my-4">Contribuímos para o desenvolvimento sustentável das comunidades atendidas.</p>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
-                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
-                        <div class="service-link"><a href="#" class="h4 mb-0">Assistencia Social</a></div>
+                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Assistencia Social</h5>
+                            <p class="text-white mb-4">Realizamos acções sociais para ajudar os mais necessitados.</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
                     </div>
-                    <p class="my-4">Realizamos acções sociais para ajudar os mais necessitados.</p>
+                </div>
+                <div class="col-12">
+                    <div class="d-flex justify-content-center align-items-center"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Todos os Servicos</a></div>
                 </div>
             </div>
         </div>
@@ -305,55 +320,6 @@
                         <h4 class="display-5 fw-bold text-white mb-0">89</h4>
                         <p class="mb-0">Anos de Existencia</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid donation py-5">
-        <div class="container py-5">
-            <div class="text-center mx-auto pb-5" style="max-width:800px;">
-                <h5 class="text-uppercase text-primary">Programas ou Projectos</h5>
-                <h1 class="mb-0">Salvando vidas...</h1>
-            </div>
-            <div class="row g-4">
-                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
-                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
-                        <div class="d-flex flex-column donation-content">
-                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
-                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
-                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
-                        <div class="d-flex flex-column donation-content">
-                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
-                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
-                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
-                        <div class="d-flex flex-column donation-content">
-                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
-                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
-                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
-                        <div class="d-flex flex-column donation-content">
-                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
-                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="d-flex justify-content-center align-items-center"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Todos os Programas</a></div>
                 </div>
             </div>
         </div>
