--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <li class="nav-item"><a class="nav-link" href="#">Blogue</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">CURSOS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">DICAS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="sefat-setup.exe">DOWNLOADS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="downloads">DOWNLOADS</a></li>
                     </ul>
                 </div>
             </div>
